mon/PGMap: Summarise OSDs in blocked/stuck requests

Fixes: https://tracker.ceph.com/issues/23205

Signed-off-by: Brad Hubbard <bhubbard@redhat.com>